(Fix) - fixed pagging alignment

--- a/assets/scss/block/_icon.scss
+++ b/assets/scss/block/_icon.scss
@@ -259,3 +259,7 @@ $icon_extraspace: 5px;
 .icon--noextrapadding {
 
 }
+
+.icon--inlineblock {
+	//display: inline-block;
+}
